2010-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (backgroundColor, borderColor, matteColor):
	Opacity part of user-specified color needs to be preserved.
	Problem was reported by Alexander Zheltov.

2010-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Applied Automake 1.11.1 patch by Ralf Wildenhues
	which is necessary for the test suite to pass under Windows/MinGW
	due to command line length limits.

2010-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/draw.c, wand/drawing_wand.c: Pass full user-provided
	double precision resolution to renderer.  Truncating the
	resolution causes problems in some cases.  Resolves SourceForge
	bug 3058387 "Incorrect Copy Compositing through C interface".

2010-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (StringToList): Fix performance problem caused
	by using strlcpy.

	* coders/pnm.c (ReadPNMImage): Q8 build should be able to read
	16-bit PGM images.

2010-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MontageImageCommand): Fix memory leak of
	MontageInfo structure allocation in error handling path.

	* magick/montage.c (MontageImages): Fix crash observed with
	"-geometry x+0+0".  Problem reported by Simon Rainer.

2010-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Update to Automake 1.11.1.

2010-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use AC_USE_SYSTEM_EXTENSIONS to enable system API
	extensions.

2010-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (ModifyCache): Fix deadlock in
	ClonePixelCache() which was caused by using the same semaphore
	pointer in the source and destination images.  Problem was
	reported by Stefan Schramowski.

2010-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/info.c (WriteINFOImage): Added an 'INFO' coder which