@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020100908"
+#define public MagickPackageVersionAddendum ".020100910"
 #define public MagickPackageReleaseDate "unreleased"
