@@ -1,4 +1,4 @@
-.TH gm 1 "2010/08/07" "GraphicsMagick"
+.TH gm 1 "2010/09/10" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -1245,6 +1245,15 @@ also preserved if the input is a JPEG file and the output is a JNG
 file.  If the colorspace of the output file differs from that of the
 input file, the quality setting is preserved but the sampling-factors
 are not.
+
+.in 15
+.in 15
+.B "pdf:use-cropbox"
+.in 20
+ \fR
+.in 20
+If the pdf:use-cropbox flag is defined, then Ghostscript is
+requested to apply the PDF crop box.
 
 .in 15
 .in 15
