@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2010-09-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/pdf.c (ReadPDFImage): Enable use of PDF crop box via
+        -define pdf:use-cropbox=true. Patch contributed by Chris Gilling.
+        SourceForge patch ID 3063794, "Add support for using crop box for
+        pdf import".
+
+</UL>
+<p>
 2010-09-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
