@@ -1481,6 +1481,10 @@ file.  If the colorspace of the output file differs from that of the
 input file, the quality setting is preserved but the sampling-factors
 are not.
 </dd>
+<dt>pdf:use-cropbox</dt>
+<dd>If the pdf:use-cropbox flag is defined, then Ghostscript is
+requested to apply the PDF crop box.
+</dd>
 <dt>ps:imagemask</dt>
 <dd>If the ps:imagemask flag is defined, the PS3 and EPS3 coders will
 create Postscript files that render bilevel images with the Postscript
